spl2/hn_tests/failing/flip4.hn
foo = {
	flip f = {
		flipped x y = f y x
		flipped
	}
	flipped x = sum x 5
	flipped ((flip sum) 3 2)
}